--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,8 @@
 h1 {
   color: #7393B3;
   background-color: #eeaf6a;
+  font-size: 50px;
+  text-align: center;
 }
 
 h2 {
@@ -15,12 +17,24 @@ p {
 
 ul {
   font-size: 15px;
+  font-weight: bold;
   line-height: 30px;
   padding-left: 50px;
 }
 
 ol {
+  list-container
+  text-align: center;
   font-size: 15px;
   line-height: 30px;
   padding-left: 50px;
+}
+
+img {
+  padding-left: 45%;
+
+}
+
+.list-container {
+  padding-left: 45%;
 }
